# vigilant-chainsaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: policy.json  policy.v2.docker.json  policy.v2.example.json  policy.v2.windows.json
deploy/logrotate/: ibn-monitor
deploy/systemd/: ibn-monitor-nftables.path  ibn-monitor-nftables.service  ibn-monitor.service
docs/operator/: docker.md  migration-and-events.md  ops-state-api.md  release-checklist.md  runbook.md
scripts/: apply-nftables.sh  generate_test_pcap.py  install-systemd.sh  microbench_pipeline.py
src/ibn_monitor/: __init__.py  capture.py  capture_afpacket.py  capture_live.py  capture_windows.py  cbpf.py  cli.py  config.py  dashboard.py  decode.py  enforcement.py  engine.py  episodes.py  events.py  evidence_stub.py  health.py  journal.py  linux_packet.py  migration.py  models.py  (+14 more)
tests/: conftest.py  factories.py  packet_bytes.py  pcap_bytes.py  test_capture.py  test_capture_windows.py  test_cbpf.py  test_cli.py  test_cli_v2.py  test_config.py  test_config_v2.py  test_decode_fuzz_v2.py  test_decode_v2.py  test_enforcement.py  test_enforcement_v2.py  test_engine.py  test_episodes_v2.py  test_events.py  test_evidence_v2.py  test_health.py  test_journal_v2.py  test_migration.py  test_models_v2.py  test_monitor.py  test_notifications_v2.py  test_operations_v2.py  test_parity_v2.py  test_pcap_v2.py  test_pipeline_v2.py  test_policy_v2.py  test_replay_v2.py  test_staged_reader.py
(+8 files in other folders)
