[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibn-continuous-traffic-monitor"
version = "1.0.0"
description = "Policy-driven continuous network traffic monitoring and optional nftables enforcement"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-only" }
authors = [{ name = "Tertius Geldenhuys" }]
dependencies = [
  "scapy==2.7.0",
  "jsonschema>=4.18,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.12,<1",
]

[project.scripts]
ibn-monitor = "ibn_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ibn_monitor = ["policy.schema.json"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=ibn_monitor --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# dashboard.py embeds a static HTML/CSS asset; CSS rules stay on one line each.
"src/ibn_monitor/dashboard.py" = ["E501"]
